upto about me done

--- a/src/components/Home/MyNavbar/MyNavbar.css
+++ b/src/components/Home/MyNavbar/MyNavbar.css
@@ -1,9 +1,8 @@
-/* #navbar {
-    height: 80px;
-    width: 100%;
+ #navbar {
+    background-color: #05386B;
   }
   
-  .navbar-img {
+ /* .navbar-img {
     width: 160px;
     height: 120px;
   }
