--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -10,7 +10,7 @@ header h1 {
     /* border: 1px solid red; */
   }
   .header-text {
-    margin-top: 10px;
+    margin-top: 0px;
   }
   .main-title {
     color: #4dc5af;
@@ -29,13 +29,13 @@ header h1 {
     left: 30px;
   }
   
-  /* .sticky-icon {
-    margin: 20% 2%;
-    font-size: 25px;
+   .sticky-icon {
+    margin: 20% 2% 10%;
+    font-size: 53px;
     color: #41a796;
   } */
   
-  /* .line {
+   .line {
     width: 1px;
     background-color: #4dc5af;
     height: 130px;
@@ -49,7 +49,7 @@ header h1 {
     border-radius: 15px !important;
     position: fixed;
     right: 50px;
-  } */
+  } 
   
   .typewriter-span {
     color: #17c761;
