A basic structure done

--- a/src/components/Home/Header/Header.css
+++ b/src/components/Home/Header/Header.css
@@ -3,7 +3,7 @@ header h1 {
   }
   header{
     height: 540px;
-    color: pink;
+    color: whitesmoke;
     text-align: center;
     background-color: #05386B;
     width: 100%;
